// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Category when the name prop is set to "Dotnet is reads the siteConfig and uses the configured icon and subtitle 1`] = `
<div
  className="category-container column is-one-third"
>
  <div
    className="category"
    onClick={[Function]}
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
    <h2
      className=" has-text-centered"
    >
      Dotnet
    </h2>
    <div
      className="category-content"
    >
      <div
        className="media"
      >
        <div
          className="media-content"
        >
          <p
            className="subtitle is-6"
          >
            GraphQL .NET Libraries
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Category when the name prop is set to "Elixir is reads the siteConfig and uses the configured icon and subtitle 1`] = `
<div
  className="category-container column is-one-third"
>
  <div
    className="category"
    onClick={[Function]}
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
    <h2
      className=" has-text-centered"
    >
      Elixir
    </h2>
    <div
      className="category-content"
    >
      <div
        className="media"
      >
        <div
          className="media-content"
        >
          <p
            className="subtitle is-6"
          >
            GraphQL Elixir Libraries
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Category when the name prop is set to "Examples is reads the siteConfig and uses the configured icon and subtitle 1`] = `
<div
  className="category-container column is-one-third"
>
  <div
    className="category"
    onClick={[Function]}
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
    <h2
      className=" has-text-centered"
    >
      Examples
    </h2>
    <div
      className="category-content"
    >
      <div
        className="media"
      >
        <div
          className="media-content"
        >
          <p
            className="subtitle is-6"
          >
            Example Projects using GraphQL
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Category when the name prop is set to "Go is reads the siteConfig and uses the configured icon and subtitle 1`] = `
<div
  className="category-container column is-one-third"
>
  <div
    className="category"
    onClick={[Function]}
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
    <h2
      className=" has-text-centered"
    >
      Go
    </h2>
    <div
      className="category-content"
    >
      <div
        className="media"
      >
        <div
          className="media-content"
        >
          <p
            className="subtitle is-6"
          >
            GraphQL Go Libraries
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Category when the name prop is set to "Java is reads the siteConfig and uses the configured icon and subtitle 1`] = `
<div
  className="category-container column is-one-third"
>
  <div
    className="category"
    onClick={[Function]}
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
    <h2
      className=" has-text-centered"
    >
      Java
    </h2>
    <div
      className="category-content"
    >
      <div
        className="media"
      >
        <div
          className="media-content"
        >
          <p
            className="subtitle is-6"
          >
            GraphQL Java Libraries
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Category when the name prop is set to "Javascript is reads the siteConfig and uses the configured icon and subtitle 1`] = `
<div
  className="category-container column is-one-third"
>
  <div
    className="category"
    onClick={[Function]}
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
    <h2
      className=" has-text-centered"
    >
      Javascript
    </h2>
    <div
      className="category-content"
    >
      <div
        className="media"
      >
        <div
          className="media-content"
        >
          <p
            className="subtitle is-6"
          >
            GraphQL JavaScript Libraries
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Category when the name prop is set to "Php is reads the siteConfig and uses the configured icon and subtitle 1`] = `
<div
  className="category-container column is-one-third"
>
  <div
    className="category"
    onClick={[Function]}
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
    <h2
      className=" has-text-centered"
    >
      Php
    </h2>
    <div
      className="category-content"
    >
      <div
        className="media"
      >
        <div
          className="media-content"
        >
          <p
            className="subtitle is-6"
          >
            GraphQL PHP Libraries
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Category when the name prop is set to "Python is reads the siteConfig and uses the configured icon and subtitle 1`] = `
<div
  className="category-container column is-one-third"
>
  <div
    className="category"
    onClick={[Function]}
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
    <h2
      className=" has-text-centered"
    >
      Python
    </h2>
    <div
      className="category-content"
    >
      <div
        className="media"
      >
        <div
          className="media-content"
        >
          <p
            className="subtitle is-6"
          >
            GraphQL Python Libraries
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Category when the name prop is set to "Relay is reads the siteConfig and uses the configured icon and subtitle 1`] = `
<div
  className="category-container column is-one-third"
>
  <div
    className="category"
    onClick={[Function]}
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
    <h2
      className=" has-text-centered"
    >
      Relay
    </h2>
    <div
      className="category-content"
    >
      <div
        className="media"
      >
        <div
          className="media-content"
        >
          <p
            className="subtitle is-6"
          >
            GraphQL Relay Libraries
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Category when the name prop is set to "Ruby is reads the siteConfig and uses the configured icon and subtitle 1`] = `
<div
  className="category-container column is-one-third"
>
  <div
    className="category"
    onClick={[Function]}
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
    <h2
      className=" has-text-centered"
    >
      Ruby
    </h2>
    <div
      className="category-content"
    >
      <div
        className="media"
      >
        <div
          className="media-content"
        >
          <p
            className="subtitle is-6"
          >
            GraphQL Ruby Libraries
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Category when the name prop is set to "Scala is reads the siteConfig and uses the configured icon and subtitle 1`] = `
<div
  className="category-container column is-one-third"
>
  <div
    className="category"
    onClick={[Function]}
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
    <h2
      className=" has-text-centered"
    >
      Scala
    </h2>
    <div
      className="category-content"
    >
      <div
        className="media"
      >
        <div
          className="media-content"
        >
          <p
            className="subtitle is-6"
          >
            GraphQL Scala Libraries
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Category when the name prop is set to "Sql is reads the siteConfig and uses the configured icon and subtitle 1`] = `
<div
  className="category-container column is-one-third"
>
  <div
    className="category"
    onClick={[Function]}
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
    <h2
      className=" has-text-centered"
    >
      Sql
    </h2>
    <div
      className="category-content"
    >
      <div
        className="media"
      >
        <div
          className="media-content"
        >
          <p
            className="subtitle is-6"
          >
            GraphQL SQL Libraries
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Category when the name prop is set to "Tools is reads the siteConfig and uses the configured icon and subtitle 1`] = `
<div
  className="category-container column is-one-third"
>
  <div
    className="category"
    onClick={[Function]}
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
    <h2
      className=" has-text-centered"
    >
      Tools
    </h2>
    <div
      className="category-content"
    >
      <div
        className="media"
      >
        <div
          className="media-content"
        >
          <p
            className="subtitle is-6"
          >
            Level up your React with tools
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
